# pathce

gcard_es/: Cargo.toml  test_output.bincode
gcard_es/src/: error.rs  graph.rs  lib.rs  query.rs
gcard_es/src/degreepiecewise/: function.rs  mod.rs  wrapper.rs
