[package]
name = "gcard_es"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
maplit = "1.0.2"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
mimalloc = "0.1.42"
